# master-thesis-scripts-and-measures

./: .gitignore  README.md  Readme.md
box_measurements/: .gitignore  apply_traffic_limit.sh  aws_measure_conf.json  bridge_eth_wifi.sh  bridge_two_subnets.sh  bridge_wlan_eth.sh  fcc-unlock.c  filter_pcap.sh  get_pcap_files.sh  kill_eth_wifi_bridge.sh  local_measure_conf.json  pull_config.json  pull_pcap.sh  pull_test_files.sh  raspi_measure_conf.json  real_intf_measure_conf.json  setup_wifi_desktop.sh  setup_wifi_internet_adapter.sh  setup_wifi_internet_adapter_to_wifi.sh  setup_wifi_internet_onboard.sh  setup_wifi_no_internet.sh  start_quicheperf_client.sh  start_quicheperf_server.sh  test_android.sh  test_ios.sh  test_single_android.sh  testing_notes.md
box_measurements/measurements/RealLifeQuicheperf/24_05/18_49/: Notes.md
mininet/: Mininet_Setup.drawio  command.sh  config.py  experiment.py  experiments.py  logfile.py  main.py  measurement_util.py  move_measures_into_folder.py  testing.py  topologies.py  two_path.py
mininet/topologies/: cellular_network.py  ethernet_network.py  old_topologies.py  real_world_nat_topo.py  topologies.py  wifi_direct.py
mininet_measurements/: binding_times.txt  first_probe_integration.txt  quic_probing.txt  relay_response_time.txt  relay_time.txt  stun_times.txt  sync_times_3ms.txt  sync_times_6ms.txt
notes/: Notes.md  cellular_testing.md  testing_notes.md
pixelRooting/: README.txt
pixelRooting/taimen-rp1a.201005.004.a1-factory-2f5c4987/: README.txt
plotting/: extractTime.py  parsePcap.py  plotPcap.py
quicheperf/: .gitignore  Cargo.toml
quicheperf/src/: cli.rs  client.rs  common.rs  main.rs  protocol.rs  quicheperf.pfx  sendto.rs  server.rs  ui.rs
r2m2p2/: Cargo.toml
r2m2p2/src/: client.rs  common.rs  ice.rs  multiplexer.rs  quic_client.rs  quic_multiplex.rs  quic_server.rs  quic_stun.rs  server.rs
resources/: AirDrop Measurement Overview.drawio  AirDrop Test 1.drawio  AirDrop Test 2.drawio  AirDrop Test 3.drawio  AirDropOverview.drawio  AirDropOverviewNew.drawio  AirDropOverview_cellular.drawio  AirDropOverview_short.drawio  FaceTimeOverview.drawio  FaceTimeTest1.drawio  FaceTimeTest2.drawio  ICEAgentFlow.drawio  ICE_Multiplexer.drawio  Mininet_ICE_Setup.drawio  Mininet_Setup_1.drawio  Mininet_WebRTC_Setup.drawio  QUIC_ICE_Idea.drawio  Reallife Test 1.drawio  WhatsappCallOverview.drawio  WhatsappTest1.drawio  WhatsappTest2.drawio  architecture(1).drawio  architecture_old.drawio  architecture_overview.drawio  design_interfaces.drawio  design_overview_list  ice_architecture(2).drawio  ice_packets.drawio  ice_packets_ascii.txt  implementation_full.drawio  mininet_full_setup.drawio  quicheperf_architecture.drawio  quicheperf_architecture_new(1).drawio  quick_share_test.drawio  quick_share_test_3.drawio  real_world_nat_failure.drawio
