[package]
name = "quicheperf"
version = "0.1.0"
authors = ["Hendrik Cech <hendrik.cech@tum.de>"]
edition = "2018"
publish = false

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["quiche/fuzzing"]

# Enable qlog support.
qlog = ["quiche/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["quiche/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["quiche/sfv"]

default = ["qlog", "sfv"]

[dependencies]
env_logger = "0.6"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "1"
log = "0.4"
ring = "0.16"
quiche = { path = "../../quiche-cm/quiche", features = ["qlog"] }
qlog = { path = "../../quiche-cm/qlog" }
libc = "0.2"
nix = { version = "0.27", features = ["net", "socket", "uio"] }
slab = "0.4"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
serde_with = "1.3.1"
chrono = "0.4.23"
zstd = { version = "0.12.0", features=["zstdmt"] }
synchronized-writer = "1.1.11"
git-testament = "0.2.1"
clap = { version = "4.1.4", features = ["derive"] }
parse-size = "1.0.0"
ctrlc = "3.4.0"
webrtc-util = "0.8.0"
hexdump = "0.1.1"

[lib]
crate = "quicheperf"
path = "src/main.rs"
