[package]
name = "r2m2p2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="quic-multiplex"
path="src/quic_multiplex.rs"

[[bin]]
name="quic-stun"
path="src/quic_stun.rs"

[dependencies]
# quiche = "0.18.0"
env_logger = "0.9"
quiche = { path = "../../quiche-cm/quiche", features = ["qlog"] }
quicheperf = { path = "../quicheperf" }
log = { version = "0.4", features = ["std"] }
ring = "0.16"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
webrtc = { version = "0.9.0"}
webrtc-ice = { version = "0.10.0"}
anyhow = "1"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octets = { version = "0.3.0"}
clap = "3"
rand = "0.8.5"
async-trait = "0.1"
nix = { version = "0.27", features = ["net", "socket", "uio"] }
libc = "0.2"
slab = "0.4"
synchronized-writer = "1.1.11"
zstd = { version = "0.12.0", features=["zstdmt"] }
hexdump = "0.1.1"
ctrlc = "3.4.0"